# native

./: .clang-format  .clang-tidy  .clangd  .gdbinit  .gdbinit.vsc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.rs  building.w32.md  c.mk  clangCl.patch  cpp.mk  flake.nix  native.code-workspace  wrapper.h
cmake/: Findcef.cmake  Findcef_dll_wrapper.cmake  Finddetours.cmake  Finddobby.cmake  Findlibcef.cmake  Findspdlog.cmake  Findwrapper.cmake  clangCl.patch  compilerChecks.cmake  linuxFlags.patch  noTests.patch
nix/: libcef.nix  libcefPatched.nix  spotify.nix  updateSpotify.sh  wrapper.nix
scripts/: dl_cef.py  generateCompileCommands.ps1  generateLaunchJSON.ps1  generateLaunchJSON.sh  getChromiumVersion.ps1  injectWrapper.ps1  injectWrapper.sh  installHeadersWindows.ps1  launch.json  move.ps1
src/: callbacks.rs  cef.rs  lib.rs  main.cpp  main.hpp  vtable_hooks.rs
src/api/: api.cpp  api.hpp  entrypoint.cpp  entrypoint.hpp  jsInjection.cpp  jsInjection.hpp  quickCss.cpp  quickCss.hpp  settings.cpp  settings.hpp  themes.cpp  themes.hpp
src/api/util/: APIFunction.hpp  APIUsage.cpp  APIUsage.hpp  CBHandler.cpp  CBHandler.hpp  ScopedV8Context.cpp  ScopedV8Context.hpp  V8CallbackData.hpp  V8Type.cpp  V8Type.hpp  json.cpp  json.hpp
src/cef/: mod.rs  utils.rs
src/config/: Config.cpp  Config.hpp
src/fs/: FileChooserDialogCtx.cpp  FileChooserDialogCtx.hpp  FilePicker.cpp  FilePicker.hpp  GDialogRunner.c  GDialogRunner.h  Watcher.cpp  Watcher.hpp  fs.cpp  fs.hpp
src/hook/: hook.cpp  hook.hpp  linux.cpp  win.cpp
src/inject/: styles.js
src/linux/: mod.rs  preload.rs
src/log/: Logger.cpp  Logger.hpp  log.cpp  log.hpp
src/path/: path.cpp  path.hpp
src/util/: MessageBox.cpp  MessageBox.hpp  TaskCBHandler.cpp  TaskCBHandler.hpp  iter.hpp  json.cpp  json.hpp  launch.cpp  launch.hpp  string.cpp  string.hpp  util.cpp  util.hpp
src/win/: mod.rs  version_reimpl.rs
