[package]
name = "extendify-native"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows-sys = {
    version = "0.61.2",
    features = [
        "Win32",
        "Win32_Security",
        "Win32_System",
        "Win32_System_SystemServices",
        "Win32_System_LibraryLoader",
        "Win32_System_Diagnostics",
        "Win32_System_Diagnostics_Debug",
    ]
}
minhook = "0.9.0"

[dependencies]
ureq = "3.3.0"

[build-dependencies]
bindgen = "0.71.0"

[lib]
name = "extendify_native"
crate-type = ["cdylib"]

