[package]
name = "extendify-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "extendify_native"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
minhook = "0.9.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32",
    "Win32_Security",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
ureq = "3.3.0"

[build-dependencies]
bindgen = "0.72.1"

